# smol-vision

./: README.md  configure.sh  pyproject.toml
src/smol_vision/: attn.py  config.py  from_pretrained.py  glu.py  model.py  open_vision_2.py  rope.py  smol_vision.py  train.py
src/smol_vision/datasets/: preview_recap_datacomp_1b.py  recap_coco.py  recap_datacomp_1b.py
src/smol_vision/models/open_vision_2/: config.py  from_pretrained.py  open_vision_2.py
src/smol_vision/models/smol_vision/: config.py  from_pretrained.py  smol_vision.py
src/smol_vision/modules/: attn.py  glu.py  mlp.py  rope.py
trainers/: train_open_vision_2.py  train_smol_vision.py
