[project]
name = "tiny-openvision2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.1.1",
    "flax>=0.11.2",
    "jax>=0.7.2",
    "matplotlib>=3.10.6",
    "pillow>=11.3.0",
    "transformers>=4.56.1",
]

[project.scripts]
tiny-openvision2 = "tiny_openvision2.hello:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
